[gd_scene load_steps=18 format=3 uid="uid://2xun3rd2y6uf"]

[ext_resource type="Script" path="res://scenes/player/Player.gd" id="1_mb422"]
[ext_resource type="Script" path="res://classes/CharacterStateMachine.gd" id="2_28vnp"]
[ext_resource type="Texture2D" uid="uid://dw0gchk1ex5dp" path="res://scenes/player/sprites/Torso Nopack/TorsoNoPack.png" id="2_tuhl2"]
[ext_resource type="Script" path="res://classes/states/CharacterState_Walk.gd" id="3_cjgww"]
[ext_resource type="Script" path="res://classes/states/CharacterState_Idle.gd" id="4_ko4ab"]
[ext_resource type="Texture2D" uid="uid://cvnv67ltdmxgn" path="res://icon.svg" id="6_o85yx"]
[ext_resource type="Script" path="res://scenes/player/aim_indicator.gd" id="7_lkym7"]
[ext_resource type="Script" path="res://scenes/player/Equipment.gd" id="8_2q1at"]
[ext_resource type="PackedScene" uid="uid://c3dt0kf8iwmwh" path="res://scenes/weapons/AutoRifle.tscn" id="9_w3hrb"]
[ext_resource type="Script" path="res://scenes/weapons/WeaponData.gd" id="10_km6v6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3i843"]
size = Vector2(9.25, 4.75)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7dv52"]
radius = 6.0
height = 26.0

[sub_resource type="Animation" id="Animation_n4jfd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1s4us"]
resource_name = "hurtBlink"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.494118), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uewki"]
_data = {
"RESET": SubResource("Animation_n4jfd"),
"hurtBlink": SubResource("Animation_1s4us")
}

[sub_resource type="Resource" id="Resource_e7qgv"]
resource_local_to_scene = true
script = ExtResource("10_km6v6")
name = "null"
tags = Array[String]([])
weaponRange = 500.0
fireRate = 0.66
rawDamage = 50.0
damageType = 0
projectileSpeed = 300.0
projectileCount = 1
projectileChain = 1
areaOfAffect = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pgf1h"]
radius = 50.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_mb422")
maxHealth = 500

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
texture = ExtResource("2_tuhl2")
hframes = 7
vframes = 7

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -45.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.698633, 0.944822)
color = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_3i843")

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("2_28vnp")

[node name="idle" type="Node2D" parent="StateMachine"]
script = ExtResource("4_ko4ab")

[node name="walk" type="Node2D" parent="StateMachine"]
script = ExtResource("3_cjgww")

[node name="hurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 21

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_7dv52")

[node name="hurtTimer" type="Timer" parent="."]
one_shot = true

[node name="EffectsAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uewki")
}

[node name="AimIndicator" type="Sprite2D" parent="."]
position = Vector2(6.39, 0)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_o85yx")
script = ExtResource("7_lkym7")
radius = 25.0

[node name="Equipment" type="Node2D" parent="." node_paths=PackedStringArray("weapon1")]
script = ExtResource("8_2q1at")
weapon1 = NodePath("Weapon")

[node name="Weapon" parent="Equipment" instance=ExtResource("9_w3hrb")]
position = Vector2(-7, 0)
weaponData = SubResource("Resource_e7qgv")

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource("CircleShape2D_pgf1h")

[connection signal="area_entered" from="PickupArea" to="." method="_on_pickup_area_area_entered"]
